--- a/website/better-chess-com/src/App.css
+++ b/website/better-chess-com/src/App.css
@@ -13,15 +13,19 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container {
+  background-color: #f9f8f9;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(51, 51, 51);
+}
+
+.opening-container {
+  display: flex;
+  flex-direction: row;
 }
 
 .App-link {
@@ -32,6 +36,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
