--- a/website/better-chess-com/src/App.css
+++ b/website/better-chess-com/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #f9f8f9;
 }
 
 .App-logo {
@@ -85,6 +86,10 @@
 
 .card-title {
   margin-block-start: 0;
+}
+
+.hoverGray:hover {
+  background-color: rgb(51, 51, 51, 0.2);
 }
 
 @keyframes App-logo-spin {
