--- a/website/better-chess-com/src/App.css
+++ b/website/better-chess-com/src/App.css
@@ -94,12 +94,18 @@
   background-color: rgb(51, 51, 51, 0.2);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+.countryflag {
+  display: block;
+  bottom: 0;
+  left: 0;
+  font-size: 20px;
+}
 
-  to {
-    transform: rotate(360deg);
-  }
+.stats-cell {
+  width: 100;
+  font-size: 12px;
+}
+
+.stats-cell>.elo {
+  font-weight: bold;
 }
