--- a/website/better-chess-com/src/BoardPlay.css
+++ b/website/better-chess-com/src/BoardPlay.css
@@ -1,13 +1,3 @@
-.variant-line {
-  text-overflow: ellipsis;
-  overflow: hidden;
-  width: 400px;
-  height: 1.2em;
-  white-space: nowrap;
-  padding: 6px 0 6px 0;
-  font-size: 15px;
-}
-
 .lichess-font {
   font-family: 'Lichess';
   font-size: 15px;
@@ -19,7 +9,7 @@
 }
 
 .san-cell:hover {
-  background-color: #bfd7e4;
+  background-color: #7dcbbc;
   line-height: 30px;
 }
 
@@ -33,5 +23,17 @@
 }
 
 .san-cell-current {
-  background-color: #bfd7e4;
+  font-weight: bold;
+  /*outline: 1px solid black;
+  outline-offset: -1px;*/
+}
+
+.quizz-indication {
+  height: 50px;
+  line-height: 50px;
+  width: 300px;
+  text-align: center;
+  font-size: 15px;
+  font-weight: bold;
+  color: #1976d2;
 }
